# youtube-info-crawler

./: .gitignore  Cargo.toml  input.sample.csv
src/: browser.rs  data_processor.rs  main.rs
src/metrics/: channel_metrics.rs  mod.rs  video_list_metrics.rs
