[package]
name = "youtube-info-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chromiumoxide = "0.6.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.30"
rayon = "1.10.0"
reqwest = "0.11"
rustube = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
youtube-captions = { version = "0.1.0", features = ["json3", "srv1", "srv2", "srv3"] }
youtube_dl = { version = "0.10.0", features = ["reqwest", "tokio"] }
