[package]
name = "youtube-info-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chromiumoxide = "0.6.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
futures-util = "0.3.30"
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["blocking"] }
rustube = "0.6.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
srtlib = "0.1.9"
subparse = "0.7.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rayon = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
youtube-captions = { version = "0.1.0", features = ["json3", "srv1", "srv2", "srv3"] }
youtube_dl = { version = "0.10.0", features = ["reqwest", "tokio"] }
